--- a/public/card.css
+++ b/public/card.css
@@ -1,12 +1,11 @@
 .flip-card {
-    background-color: transparent;
+    
     width: 300px;
     height: 300px;
-    perspective: 1000px;
-    float : left;
-    margin : 20px;
-
-
+    perspective: 1000px;        
+    font-family: 'Roboto';
+    margin: 5%;;
+    
   }
   
   .flip-card-inner {
@@ -19,10 +18,33 @@
     
 
   }
-  
-  .flip-card:hover .flip-card-inner {
+
+  .flip-card-inner-rotated {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transform: rotateY(180deg);
+
+    
+
   }
+
+
+
+
+  
+  
+  .flip-card:hover .flip-card-inner  {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+
+
+
+
   
   .flip-card-front, .flip-card-back {
     position: absolute;
@@ -30,6 +52,8 @@
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    border-radius: 5px;
+
     
   }
   
@@ -58,3 +82,25 @@
     color: white;
     text-align: center;
   }
+
+  .delete-card {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 10px 15px;
+    opacity: .4;
+    transition: all 0.5s ease;
+  }
+  .delete-card:hover {
+    opacity: 1;
+    transform: rotate(360deg);
+  }
+
+
+  .flip-card .flip-card-inner .delete-card :hover {
+   transform: rotateX(360deg);
+  }
+
+
+
+ 
