--- a/public/header.css
+++ b/public/header.css
@@ -1,19 +1,11 @@
-* {
-    box-sizing: border-box;
-  }
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    font-size: 17px;
-    
-  }
+
+
   .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #000000;
-    color: #ffffff;
+    background: transparent;
+    color: #000000;
   }
   
   .logo {
@@ -40,7 +32,7 @@
     display: block;
   }
   .navbar-links ul li a:hover {
-    background: #ffffff;
+    background: transparent;
     color: #000000;
   }
   .togglebtn {
@@ -60,29 +52,3 @@
     border-radius: 10px;
   }
   
-  @media only screen and (max-width: 600px) {
-    .togglebtn {
-      display: flex;
-    }
-    .navbar-links {
-      display: none;
-      width: 100%;
-    }
-    .navbar {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .navbar-links ul {
-      width: 100%;
-      flex-direction: column;
-    }
-    .navbar-links ul li {
-      text-align: center;
-    }
-    .navbar-links ul li a {
-      padding: 16px;
-    }
-    .navbar-links.active {
-      display: flex;
-    }
-  }
