--- a/public/card.css
+++ b/public/card.css
@@ -4,7 +4,8 @@
     height: 300px;
     perspective: 1000px;        
     font-family: 'Roboto';
-    margin: 5%;;
+    margin: 5%;
+    position: relative;
     
   }
   
